--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -5,7 +5,7 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	padding: 45px 20px;
+	padding: 20px 20px 14px;
 
 	h1 {
 		margin: 0;
@@ -26,6 +26,8 @@
 			list-style: none;
 			cursor: pointer;
 			transition: all ease 0.2s;
+			padding-bottom: 5px;
+			border-bottom: 2px solid transparent;
 
 			&:hover {
 				color: $purple;
@@ -35,5 +37,7 @@
 
 	.active {
 		color: $purple;
+		font-weight: 700;
+		border-bottom: 2px solid $purple;
 	}
 }
