--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,10 +1,8 @@
-%container {
-	max-width: 990px;
-	margin: 0 auto;
-}
+@import './styles/colors';
+@import './styles/container';
 
 .divider {
-	border-bottom: 1px solid #535E88;
+	border-bottom: 1px solid #E5EBF2;
 }
 
 .menu {
@@ -13,4 +11,12 @@
 
 .title {
 	@extend %container;
+}
+
+.intro {
+	text-align: center;
+	background: $grey-light;
+}
+
+.experience {
 }
