--- a/components/Experience/Experience.module.scss
+++ b/components/Experience/Experience.module.scss
@@ -2,6 +2,8 @@
 @import './styles/colors';
 
 .wrapper {
+  border-bottom: 1px solid #E5EBF2;
+
   .title  {
     text-align: center;
     text-transform: uppercase;
@@ -15,6 +17,7 @@
       width: 800px;
       margin: 0 auto;
     padding-top: 120px;
+    padding-bottom: 90px;
     .item {
       display: flex;
 
@@ -24,24 +27,7 @@
         text-align: right;
         min-width: 50%;
         padding-right: 90px;
-        border-right: 1px solid #E5EBF2;
-      }
-
-      .divider {
-        width: 1px;
-        height: 100%;
-        background: #E5EBF2;
-        position: relative;
-        margin-top: 2px;
-        div {
-          width: 9px;
-          height: 9px;
-          background: $purple;
-          border-radius: 50%;
-          position: absolute;
-          top: 2px;
-          left: -6px;
-        }
+        row-gap: 35px;
       }
 
       .company {
@@ -49,6 +35,7 @@
         padding-left: 90px;
         margin-bottom: 70px;
         flex-direction: column;
+        row-gap: 35px;
       }
     }
   }
