--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -4,21 +4,15 @@
 .wrapper {
   color: $white;
   @extend %flex;
-  h1, p {
-    margin: 0;
-  }
 
   h1 {
     margin-top: 115px;
     margin-bottom: 25px;
   }
 
-  p {
-    margin-bottom: 50px;
-  }
-
   .imageContainer {
     width: 250px;
+    margin-top: 50px;
 
     .image {
       box-shadow: 0 0 8px 0 rgba(34, 60, 80, 0.2);
@@ -28,7 +22,37 @@
   }
 
   .contacts {
-    margin-bottom: 150px;
+    margin: 30px 0 150px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    .line {
+      border-right: 1px solid #E5EBF2;
+      margin: 0 20px;
+    }
+
+    .item {
+      display: flex;
+      width: 50%;
+      flex-direction: column;
+      row-gap: 10px;
+      align-items: flex-end;
+
+      &:last-child {
+        align-items: flex-start;
+      }
+
+      .icon {
+        display: flex;
+        align-items: center;
+      }
+      svg {
+        margin-right: 5px;
+        height: 20px;
+        width: 20px;
+      }
+    }
   }
 
 }
