--- a/components/Intro/Intro.module.scss
+++ b/components/Intro/Intro.module.scss
@@ -4,7 +4,8 @@
 
 .container {
   width: 100%;
-  background: $grey-light;
+  background: #F9FBFD;
+
   .wrapper {
     padding: 150px 20px;
     @extend %container610;
