--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -8,10 +8,7 @@
 	padding: 20px 20px 14px;
 
 	h1 {
-		margin: 0;
-		color: $white;
-		font-weight: 800;
-		font-size: 25px;
+		padding: 0;
 	}
 
 	ul {
