--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,8 +6,12 @@ body {
 	padding: 0;
 
 	font-family: 'Montserrat', sans-serif;
-	background-color: #F9FBFD;
+	background-color: #ffffff;
 
+}
+
+h1, p {
+	margin: 0;
 }
 
 a {
