--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,4 +1,13 @@
-$white: #141C3A;
-$purple: #141C3A;
-$grey-light: #f1f8fb;
-$blue: #535E88;
+$forColor1: #141C3A;
+$forColor2: #535E88;
+$forColor3: #DCDCDE;
+$forColor4: #F9FBFD;
+$forColor5: #1D274F;
+$forPurple: #8428F8;
+
+$purple: $forPurple;
+$color1: $forColor1;
+$color2: $forColor2;
+$color3: $forColor3;
+$color4: $forColor4;
+$color5: $forColor5;
