--- a/components/Divider/Divider.module.scss
+++ b/components/Divider/Divider.module.scss
@@ -1,32 +1,34 @@
-@import './styles/colors';
+@import "./styles/colors";
 
 .divider {
-  position: relative;
-  div {
-    width: 9px;
-    height: 9px;
-    background: $purple;
-    border-radius: 50%;
-    position: absolute;
-    top: 0;
-    left: -4px;
-  }
+	position: relative;
+
+	div {
+		position: absolute;
+		top: -9px;
+		left: -4px;
+		width: 9px;
+		height: 9px;
+		background: $purple;
+		border-radius: 50%;
+	}
 }
 
 .vertical {
-  border-right: 1px solid #E5EBF2;
-  margin: 2px 0;
+	border-right: 1px solid $color3;
+	margin-top: 9px;
 }
 
 .horizontal {
-  border-bottom: 1px solid #E5EBF2;
+	border-bottom: 1px solid $color3;
+	margin-left: 9px;
 
-  div {
-    top: -4px;
-    left: 0;
-  }
+	div {
+		top: -4px;
+		left: -9px;
+	}
 }
 
 .dividerLast {
- border-right: none;
+	border-right: none;
 }
