--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,58 +1,57 @@
-@import '/styles/colors';
-@import '/styles/flex';
+@import "/styles/colors";
+@import "/styles/flex";
 
 .wrapper {
-  color: $white;
-  @extend %flex;
+	@extend %flex;
 
-  h1 {
-    margin-top: 115px;
-    margin-bottom: 25px;
-  }
+	h1 {
+		margin-top: 115px;
+		margin-bottom: 25px;
+	}
 
-  .imageContainer {
-    width: 250px;
-    margin-top: 50px;
+	.imageContainer {
+		width: 250px;
+		margin-top: 50px;
 
-    .image {
-      box-shadow: 0 0 8px 0 rgba(34, 60, 80, 0.2);
-      border-radius: 50%;
-      object-fit: cover;
-    }
-  }
+		.image {
+			object-fit: cover;
+			border-radius: 50%;
+			box-shadow: 0 0 8px 0 rgb(34 60 80 / 20%);
+		}
+	}
 
-  .contacts {
-    margin: 30px 0 150px;
-    display: flex;
-    justify-content: center;
-    width: 100%;
+	.contacts {
+		display: flex;
+		justify-content: center;
+		width: 100%;
+		margin: 30px 0 150px;
 
-    .line {
-      border-right: 1px solid #E5EBF2;
-      margin: 0 20px;
-    }
+		.line {
+			margin: 0 20px;
+			border-right: 1px solid $color3;
+		}
 
-    .item {
-      display: flex;
-      width: 50%;
-      flex-direction: column;
-      row-gap: 10px;
-      align-items: flex-end;
+		.item {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-end;
+			width: 50%;
+			row-gap: 10px;
 
-      &:last-child {
-        align-items: flex-start;
-      }
+			&:last-child {
+				align-items: flex-start;
+			}
 
-      .icon {
-        display: flex;
-        align-items: center;
-      }
-      svg {
-        margin-right: 5px;
-        height: 20px;
-        width: 20px;
-      }
-    }
-  }
+			.icon {
+				display: flex;
+				align-items: center;
+			}
 
+			svg {
+				width: 20px;
+				height: 20px;
+				margin-right: 5px;
+			}
+		}
+	}
 }
