--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -17,14 +17,14 @@
 		column-gap: 40px;
 
 		li {
-			color: $white;
+			padding-bottom: 5px;
+			color: $color1;
 			font-weight: 300;
 			font-size: 17px;
 			list-style: none;
+			border-bottom: 2px solid transparent;
 			cursor: pointer;
 			transition: all ease 0.2s;
-			padding-bottom: 5px;
-			border-bottom: 2px solid transparent;
 
 			&:hover {
 				color: $purple;
@@ -35,6 +35,5 @@
 	.active {
 		color: $purple;
 		font-weight: 700;
-		border-bottom: 2px solid $purple;
 	}
 }
