--- a/components/Skills/Skills.module.scss
+++ b/components/Skills/Skills.module.scss
@@ -1,23 +1,30 @@
-@import './styles/container';
-@import './styles/colors';
+@import "./styles/container";
+@import "./styles/colors";
 
 .wrapper {
+	.skills {
+		@extend %container;
 
-  .skills {
-    @extend %container;
-    width: 800px;
-    margin: 0 auto;
-    padding: 120px 20px 90px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 50px;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		width: 800px;
+		margin: 0 auto;
+		padding: 120px 20px 90px;
+		column-gap: 50px;
 
-    .item {
-      margin-bottom: 30px;
-      p {
-        border-bottom: 5px solid #E5EBF2;
-        padding-bottom: 10px;
-      }
-    }
-  }
+		.item {
+			margin-bottom: 30px;
+
+			p {
+				padding-bottom: 10px;
+			}
+
+			div {
+				width: 100%;
+				height: 5px;
+				background: $color3;
+				border-radius: 10px;
+			}
+		}
+	}
 }
