--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,13 +4,12 @@ html,
 body {
 	margin: 0;
 	padding: 0;
-
-	font-family: 'Montserrat', sans-serif;
-	background-color: #ffffff;
-
+	font-family: Montserrat, sans-serif;
+	background-color: #FFF;
 }
 
-h1, p {
+h1,
+p {
 	margin: 0;
 }
 
