мобильное меню, адаптация до экрана 375px

--- a/components/Divider/Divider.module.scss
+++ b/components/Divider/Divider.module.scss
@@ -1,4 +1,4 @@
-@import "./styles/colors";
+@import "./styles/scss/index";
 
 .divider {
 	position: relative;
@@ -15,13 +15,13 @@
 }
 
 .vertical {
-	border-right: 1px solid $color3;
 	margin-top: 9px;
+	border-right: 1px solid $color3;
 }
 
 .horizontal {
-	border-bottom: 1px solid $color3;
 	margin-left: 9px;
+	border-bottom: 1px solid $color3;
 
 	div {
 		top: -4px;
