--- a/components/Skills/Skills.module.scss
+++ b/components/Skills/Skills.module.scss
@@ -1,5 +1,4 @@
-@import "./styles/container";
-@import "./styles/colors";
+@import "./styles/scss/index";
 
 .wrapper {
 	.skills {
@@ -7,10 +6,14 @@
 
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		width: 800px;
+		max-width: 800px;
 		margin: 0 auto;
 		padding: 120px 20px 90px;
 		column-gap: 50px;
+
+		@include _tablet {
+			column-gap: 40px;
+		}
 
 		.item {
 			margin-bottom: 30px;
