добавил кнопку наверх

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -10,6 +10,10 @@
 		margin-bottom: 25px;
 	}
 
+	.subtitle {
+		text-align: center;
+	}
+
 	.imageContainer {
 		width: 250px;
 		margin-top: 50px;
