--- a/components/Up/Up.module.scss
+++ b/components/Up/Up.module.scss
@@ -1,27 +1,25 @@
 @import "./styles/scss/index";
 
 .up {
-  position: fixed;
-  right: 30px;
-  bottom: 80px;
+	position: fixed;
+	right: 30px;
+	bottom: 80px;
 
-  button {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	button {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 40px;
+		height: 40px;
+		background: $color1;
+		border: 0;
+		border-radius: 10px;
+		box-shadow: 0 4px 4px rgb(0 0 0 / 5%);
+		cursor: pointer;
 
-    cursor: pointer;
-
-    border: 0;
-    border-radius: 10px;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05);
-    background: $color1;
-
-    svg {
-      height: 30px;
-      width: 30px;
-    }
-  }
+		svg {
+			width: 30px;
+			height: 30px;
+		}
+	}
 }
