--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -11,6 +11,7 @@
 		justify-content: center;
 		width: 100%;
 		padding: 20px 20px 14px;
+		font-family: VKRegular, sans-serif;
 
 		@include _tablet {
 			align-items: flex-start;
