--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -80,14 +80,15 @@
 				transition: all ease 0.5s;
 				row-gap: 5px;
 
-				p {
-					color: white;
-				}
-
 				svg {
 					width: 30px;
 					height: 30px;
 					cursor: pointer;
+				}
+
+				p {
+					color: white;
+					margin-bottom: 5px;
 				}
 
 				a {
