--- a/components/Ui/H/H.module.scss
+++ b/components/Ui/H/H.module.scss
@@ -1,10 +1,11 @@
-@import "./styles/scss/index";
+@import "../../../styles/scss/index";
 
 .wrapper {
 	margin: 0;
 	color: $color1;
 	font-size: 26px;
 	text-align: center;
+	font-family: VKBold, sans-serif;
 }
 
 .uppercase {
