--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,25 @@ body {
 	background-color: #FFF;
 }
 
+
+@font-face {
+	font-family: "VKRegular";
+	src: url('../fonts/VKSansDisplay-Regular.ttf');
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: "VKBold";
+	src: url('../fonts/VKSansDisplay-Bold.ttf');
+	font-weight: 700;
+}
+
+@font-face {
+	font-family: "VKMedium";
+	src: url('../fonts/VKSansDisplay-Medium.ttf');
+	font-weight: 500;
+}
+
 h1,
 p {
 	margin: 0;
@@ -16,6 +35,7 @@ p {
 a {
 	color: inherit;
 	text-decoration: none;
+	font-family: VKRegular, sans-serif;
 }
 
 * {
