--- a/components/Download/Download.module.scss
+++ b/components/Download/Download.module.scss
@@ -9,10 +9,13 @@
 		padding: 180px 20px 240px;
 	}
 
-	h1 {
+	a {
 		padding: 0;
 		color: $purple;
 		text-decoration: underline;
+		text-transform: uppercase;
+		font-size: 26px;
+		font-family: VKBold, sans-serif;
 		cursor: pointer;
 	}
 }
