--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -53,21 +53,12 @@
 		.item {
 			display: flex;
 			flex-direction: column;
-			align-items: flex-end;
+			align-items: center;
 			width: 50%;
 			row-gap: 10px;
 
-			&:last-child {
-				align-items: flex-start;
-			}
-
 			@include _tablet {
-				align-items: center;
 				width: 100%;
-
-				&:last-child {
-					align-items: center;
-				}
 			}
 
 			.icon {
@@ -80,6 +71,11 @@
 				height: 20px;
 				margin-right: 5px;
 			}
+
+			a {
+				color: $color2;
+			}
+
 		}
 	}
 }
