добавил debounce для хука useResize, отрефакторил стили, добавил _document, обавил meta теги

--- a/components/Business/Education/Education.module.scss
+++ b/components/Business/Education/Education.module.scss
@@ -1,11 +1,9 @@
-@import "../../../styles/scss/index";
-
 .wrapper {
 	width: 100%;
 	background: $color4;
 
 	.educations {
-		@extend %container;
+		@include container;
 
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
