--- a/components/Business/Projects/Projects.module.scss
+++ b/components/Business/Projects/Projects.module.scss
@@ -1,8 +1,6 @@
-@import "../../../styles/scss/index";
-
 .wrapper {
 	.projects {
-		@extend %container;
+		@include container;
 
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
