--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,5 +1,3 @@
-@import "./styles/scss/index";
-
 .progressBar {
 	position: fixed;
 	top: 0;
@@ -16,7 +14,7 @@
 }
 
 .title {
-	@extend %container;
+	@include container;
 }
 
 .intro {
